[workspace]
members = [
    "rs",
    "src/tenkei90",
    "src/arc110",
    "src/abc195",
    "src/abc205",
    "src/ahc004",
    "src/abc207",
    "src/agc054",
    "src/acl1",
    "src/tenka1_2015_qualA",
    "src/arc116",
    "src/tenka1_2015_qualB",
    "src/past202104",
    "src/past202107",
    "src/abc208",
    "src/nikkei2019_final",
    "src/arc120",
    "src/indeednow_qualb",
    "src/code_formula_2014_final",
    "src/abc209",
    "src/dp",
    "src/abc133",
    "src/arc101",
    "src/abc037",
    "src/abc210",
    "src/arc123",
    "src/arc115",
    "src/past202010",
    "src/agc14",
    "src/agc53",
    "src/code_formula_2014_qualA",
    "src/abc211",
    "src/keyence2021",
    "src/agc21",
    "src/arc124",
]
