[workspace]
members = [
  "rs",
  "xtask",
  "src/tenkei90",
  "src/arc110",
  "src/abc195",
  "src/abc205",
  "src/ahc004",
  "src/abc207",
  "src/agc054",
  "src/acl1",
  "src/tenka1_2015_qualA",
  "src/arc116",
  "src/tenka1_2015_qualB",
  "src/past202104",
  "src/past202107",
  "src/abc208",
  "src/nikkei2019_final",
  "src/arc120",
  "src/indeednow_qualb",
  "src/code_formula_2014_final",
  "src/abc209",
  "src/dp",
  "src/abc133",
  "src/arc101",
  "src/abc037",
  "src/abc210",
  "src/arc123",
  "src/arc115",
  "src/past202010",
  "src/agc14",
  "src/agc53",
  "src/code_formula_2014_qualA",
  "src/abc211",
  "src/keyence2021",
  "src/agc21",
  "src/arc124",
  "src/agc050",
  "src/arc097",
  "src/abc212",
  "src/jsc2021",
  "src/abc206",
  "src/dwango2016_prelims",
  "src/typicalDP",
  "src/abc213",
  "src/s8pc-3",
  "src/abc214",
  "src/agc17",
  "src/codefes2016qualC",
  "src/abc215",
  "src/agc23",
  "src/utpc2011",
  "src/arc125",
  "src/caddi2018",
  "src/facebook2021_qual",
  "src/abc216",
  "src/arc47",
  "src/arc004",
  "src/tenka1_2012_final",
  "src/abc217",
  "src/rcl_contest_2021_long",
  "src/abc218",
  "src/facebook2021_r1",
  "src/agc24",
  "src/arc054",
  "src/abc219",
  "src/arc126",
  "src/ecfr113",
  "src/ecfr114",
  "src/past202005",
  "src/yukicoder315",
  "src/arc127",
  "src/facebook2021_r2",
  "src/abc220",
  "src/yukicoder316",
  "src/abc221",
  "src/abc222",
  "src/arc128",
  "src/cfr749",
  "src/abc223",
  "src/yukicoder319",
  "src/pg_battle2021",
  "src/agc20",
  "src/codefes2017final",
  "src/abc224",
  "src/abc225",
  "src/future2022qual",
  "src/future2022qual/tools",
  "src/abc226",
  "src/abc236",
  "src/abc227",
  "src/abc107",
  "src/abc228",
  "src/gcj2022_qual",
  "src/gcj2022_1a",
  "src/gcj2022_1c",
  "src/abc251",
  "src/gcj2022_2",
  "src/abc252",
  "src/abc229",
  "src/abc233",
  "src/abc231",
  "src/abc232",
  "src/abc239",
  "tmp",
  "src/facebook2022_qual",
  "src/facebook2022_r1",
]
