[package]
name = "ahc004"
version = "0.1.0"
authors = ["Ryosuke Kamesawa <emak.ryo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

proconio = { version = "0.4", features = ["derive"] }
itertools = "0.10"